Minor styling -fixed vertical alignment

--- a/blocks/journey-carousel/journey-carousel.css
+++ b/blocks/journey-carousel/journey-carousel.css
@@ -3,7 +3,7 @@
 }
 
 .section.journey-carousel-container {
-    padding: 0px 15px;
+    padding: 35px 15px;
 }
 
 .journey-carousel .jc-details p {
@@ -22,29 +22,27 @@
     font-size: 28px;
     font-weight: 300;
     line-height: 1.2;
-    /*font-family: "Lato", sans-serif;*/
-    margin: 0px;
+    margin: 0;
 }
 
 .journey-carousel .jc-details h3+p {
-    margin: 0px;
+    margin: 0;
     font-size: 32px;
     text-transform: uppercase;
     line-height: 1.2;
     width: 100%;
     font-weight: bold;
     color: #164b91;
-    /*font-family: "Lato", sans-serif;*/
 }
 
 .journey-carousel .jc-items {
     vertical-align: middle;
-    margin: 0 0px;
+    margin: 0;
     display: flex;
     flex-direction: column;
     background: url("../../icons/mobile-dotted.webp") center 60px no-repeat;
     width: 100%;
-    padding: 0px;
+    padding: 0;
     background-size: 80% 80%;
 }
 
@@ -65,7 +63,6 @@
 }
 
 .journey-carousel .jc-item-details img {
-
     display: block;
 }
 
@@ -76,8 +73,8 @@
     font-size: 16px;
     line-height: 1.2;
     text-align: left;
-    margin-top: 0px;
-    margin-bottom: 0px;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .journey-carousel .jc-item-details h3+p {
@@ -98,27 +95,26 @@
 }
 
 @media (width >=768px) {
-
     .journey-carousel {
         display: flex;
         flex-direction: row;
         align-items: center;
-        margin: 0px 30px;
-        padding: 0px 15px;
+        margin: 0 24px;
+        padding: 0 15px;
     }
 
     .journey-carousel .carouselDiv {
         position: relative;
-        overflow: hidden; 
+        overflow: hidden;
         padding-left: 50px;
     }
 
     .journey-carousel .jc-details h3 {
-        font-size: 26px;
+        font-size: 15px;
     }
 
     .journey-carousel .jc-details h3+p {
-        font-size: 25px;
+        font-size: 16px;
         text-transform: unset;
     }
 
@@ -127,7 +123,7 @@
     }
 
     .journey-carousel .jc-details {
-        width: 20%;
+        width: 75%;
         display: inline-block;
         vertical-align: middle;
         margin: 0 -2px;
@@ -152,47 +148,29 @@
 
     .journey-carousel .jc-items {
         vertical-align: baseline;
-        margin: 0 0px;
-        display: flex;
         transition: transform 0.3s ease;
         flex-direction: row;
         background: none;
     }
-
+    
     .journey-carousel .jc-items .jc-item {
         flex: 0 0 50%;
-        box-sizing: border-box; 
+        box-sizing: border-box;
         transition: all 0.25s ease 0s;
+        align-self: auto;
     }
 
-    /* div.jc-arrow::after {
-        content: url("../../icons/arrow.webp");
-        display: inline;
-        
-    } */
-    .arrowDiv {
-       
+    .journey-carousel .arrowDiv {
         display: flex;
         flex-direction: column;
-        justify-content: center; 
-        position: absolute; 
+        justify-content: center;
+        position: absolute;
         right: 0;
         top: 0;
-        height: 100%; 
+        height: 100%;
     }
 
-    /* .journey-carousel .jc-items>*:nth-child(odd),
-    .journey-carousel .jc-items>*:nth-child(even) {
-        display: flex;
-        align-self: flex-start;
-         display: flex;
-        flex-direction: column;
-        width: 60%;
-        align-items: start;
-
-    } */
-
-    .leftArrow {
+    .journey-carousel .leftArrow {
         width: 32px;
         height: 32px;
         background: url("../../icons/left.webp") center center no-repeat;
@@ -201,7 +179,7 @@
         border-radius: 50%
     }
 
-    .rightArrow {
+    .journey-carousel .rightArrow {
         width: 32px;
         height: 32px;
         background: url("../../icons/right.webp") center center no-repeat;
@@ -209,19 +187,35 @@
         margin: 5px 0;
         border-radius: 50%
     }
+
+    .section.journey-carousel-container {
+        padding: 35px 0;
+    }
+
+    .journey-carousel .jc-arrow {
+        display: inline-block;
+        flex: 0 0 20%;
+        height: 100%;
+        width: 20%;
+        background: url("../../icons/arrow.webp") center center no-repeat;
+        background-size: contain;
+    }
 }
 
 @media (width >=1024px) {
+    .section.journey-carousel-container {
+        padding: 50px 0;
+    }
 
-    /* .journey-carousel .jc-items>*:nth-child(odd),
-    .journey-carousel .jc-items>*:nth-child(even) {
-        align-self: center;
-        display: flex;
-        flex-direction: row;
-        width: 80%;
-    } */
+    .journey-carousel .journey-carousel {
+        margin: 0 30px;
+    }
 
-    .arrowDiv {
+    .journey-carousel .jc-details {
+        width: 25%;
+    }
+
+    .journey-carousel .arrowDiv {
         display: none;
     }
 
@@ -233,18 +227,17 @@
         flex: 0 0 25%;
         transition: all 0.25s ease 0s;
     }
-    .jc-arrow {
-        display: inline-block;
-        flex: 0 0 20%;
-        height: 100%;
-        width: 20%;
-        background: url("../../icons/arrow.webp") center center no-repeat;
-        /* Set background image */
-        background-size: contain;
-        /* Ensure the image scales correctly */
+
+    .journey-carousel .jc-item-details {
+        flex: 1;
     }
 
-    .jc-item-details {
-        flex: 1;
+    .journey-carousel .jc-details h3 {
+        font-size: 26px;
+    }
+
+    .journey-carousel .jc-details h3+p {
+        font-size: 25px;
+        text-transform: unset;
     }
 }
