--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,7 +20,7 @@
   --text-color: black;
 
   /* fonts */
-  --body-font-family: Lato, roboto-fallback;
+  --body-font-family: lato, roboto-fallback;
   --heading-font-family: var(--body-font-family);
   --fixed-font-family: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace;
 
